--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CitySearcher</string>
     <string name="title_activity_map">Map</string>
+    <string name="search_fragment">searchFragment</string>
+    <string name="map_fragment">mapFragment</string>
 </resources>
